# TensorflowStitching

./: AndroidManifest.xml  README.md  build.gradle  local.properties  settings.gradle
jni/: CMakeLists.txt
jni/stitching/: advanceStitcher.cpp  graphCutsMinimizer.cpp  homographyManager.cpp  myStitcher.cpp  mystitcher_jni.cpp  reconstructer.cpp
jni/stitching/include/: advanceStitcher.h  myStitcher.h  reconstructer.h  timer.h
openCVLibrary320_2/src/main/: AndroidManifest.xml
res/layout/: activity_main.xml  activity_stitch.xml
res/values/: strings.xml
src/com/irina/tensorflowexample/: MainActivity.java  StitchActivity.java  Stitching.java  TensorflowSegmentator.java
